# minimal-skeleton

./: .gitignore  BVH_Player.vcxproj  BVH_Player.vcxproj.filters  CMakeLists.txt  README.md  TestBlank.bvh  TestX45.bvh  TestZ45.bvh  TestZ45Y90.bvh  ZooExcited.bvh
src/: AnimRec.cpp  AnimRec.h  BVHReader.cpp  BVHReader.h  BVH_Player.cpp  Link.cpp  Link.h  MyMath.cpp  MyMath.h  Skeleton.cpp  Skeleton.h  defs.h  linmath.h
